LOG:

20120524 - 0.9.2 changed PHP patching technique: there's no more a distinct
                 patch for every PHP release, but a list of patches that are
                 tryed starting with the newest one

20120430 - 0.9.1 integration with PHP driver PostgreSQL; upgrade of PHP
                 integration from PHP 5.4.0 to PHP 5.4.1

20120421 - 0.9.0 PHP: integration of PHP for MySQL (mysqli driver only)
                 Fixed bug # 3517316

20120331 - 0.7.4 Fixed bug # 3512953

20120321 - 0.7.3 Switch files are now loaded using G_MODULE_BIND_LAZY: it might
                 save some CPU cycle
                 New program utility: lixa-config
		 WebSphere MQ 7.1 was tested using CentOS 6.2 (32 bit)

20120209 - 0.7.2 Introduced two new parameters in lixad_conf.xml:
                 min_elapsed_sync_time
                 max_elapsed_sync_time
                 please refer to manual for usage description
                 Introduced TCP_NODELAY socket option to reduce latency in
                 client/server message passing
                 Fixed permissions for file /opt/lixa/var/run.pid (they was
                 rw-rw-rw-; fixed to rw-r--r--)
                 Removed a memory leak in lixa_xa_end() function called by
                 tx_commit()
                 Fixed a bug in lixa_job_reset function (minor defect)

20120110 - 0.7.1 fixed bug 3470598
                 Serialization of XID format id changed from hexadecimal
                 (4c495841) to decimal (1279875137) to deal with the negative
                 value (-1) of NULL XID and mixed 32/64 bit environments
                 (ffffffff is not equal to -1 for a x86-64 Linux)

20120103 - 0.7.0 First beta release

20111128 - 0.5.35 Intel/AMD 64 bit architecture passed test phase

20111113 - 0.5.34 a switch file for MySQL is now available
                  the package supplies some examples that show how LIXA can
                  be used in conjunction with MySQL, PostgreSQL, Oracle and