@@ -20,8 +20,8 @@ lixat_LDADD = ../common/liblixab.la liblixac.la
 lixat_LDFLAGS = @LDFLAGS_GTHREAD@
 lixat_SOURCES = lixat.c
 lixau_CPPFLAGS = -I$(srcdir)/../common
-lixau_LDADD = ../common/liblixab.la liblixac.la
-lixau_LDFLAGS = @LDFLAGS_GLIB@ @LDFLAGS_XML2@
+lixau_LDADD = ../common/liblixab.la @LDFLAGS_XML2@ liblixac.la
+lixau_LDFLAGS = @LDFLAGS_GLIB@
 lixau_SOURCES = lixau.c
 lixa_config_SOURCES = lixa-config.c
 lixa_config_LDFLAGS = @LDFLAGS_GLIB@
